<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>

    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="buscar">Buscar</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="prioridad_alta">Prioridad alta</string>
    <string name="prioridad_baja">Prioridad baja</string>
    <string name="eliminar_todo">Eliminar todo</string>
    <string name="agregar">agregar</string>
    <string name="guardar">guardar</string>
    <string name="eliminar">Eliminar</string>

    <string-array name="priorities">
        <item>Prioridad Alta</item>
        <item>Prioridad Media</item>
        <item>Prioridad Baja</item>
    </string-array>
</resources>