<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/buscar"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/ordenar_por">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/prioridad_alta"/>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/prioridad_baja"/>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/eliminar_todo"
        app:showAsAction="never"/>

</menu>